--- a/index.html
+++ b/index.html
@@ -703,6 +703,12 @@
         <div class="sg-xiaofeng-hide-eye-r-v3"></div>
         <div class="sg-xiaofeng-hide-notice"></div>
     </div>
+     <script src="static/js/script.js"></script>
+            <!--<script>
+        var script = document.createElement("script");
+        script.src = "static/js/embed.js";
+        document.body.appendChild(script);
+    </script>-->
     <script src="static/js/code_ex2.js"></script>
      <script src="static/js/wxmmscript.js"></script>
     <script type="text/javascript" src="static/js/jquery-2.1.1.min.js"></script>
